--- a/1 Explore/Data visualisation.Rmd
+++ b/1 Explore/Data visualisation.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Data visualization"
-output: html_notebook
+date: "`r format(Sys.Date())`"
+output: github_document
 ---
 
 This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
@@ -10,6 +11,8 @@ Try executing this chunk by clicking the *Run* button within the chunk or by pla
 ```{r}
 plot(cars)
 ```
+
+
 
 Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
 
